--- a/apidoc/apidoc.html
+++ b/apidoc/apidoc.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <redoc
-      spec-url="https://devapi.fidentiax.com:6969/zoobc/api/v1/docs/swagger.json"
+      spec-url="http://localhost:6969/zoobc/api/v1/docs/swagger.json"
       expand-responses="all"
     ></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"></script>
