modified api doc

--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="shortcut icon"
-      type="image/x-icon"
-      href="https://bitbucket.org/pmo-team-dev/express-oracle/raw/b4e9e84eb7252f4f16a45b66ca255372ef8dcd48/static/favicon.ico"
+      href="favicon.ico"
     />
     <link href="https://fonts.googleapis.com/css?family=Mandali&display=swap" rel="stylesheet">
 
@@ -21,7 +20,7 @@
   </head>
   <body>
     <redoc
-      spec-url="http://localhost:6969/zoobc/api/v1/docs/swagger.json"
+      spec-url="http://139.162.15.80:6969/zoobc/api/v1/docs/swagger.json"
       expand-responses="all"
     ></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"></script>
