--- a/html/apidoc.html
+++ b/html/apidoc.html
@@ -5,11 +5,8 @@
     <!-- needed for adaptive design -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="shortcut icon"
-      href="favicon.ico"
-    />
-    <link href="https://fonts.googleapis.com/css?family=Mandali&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=Mandali&display=swap" rel="stylesheet" />
 
     <style>
       body {
@@ -19,10 +16,7 @@
     </style>
   </head>
   <body>
-    <redoc
-      spec-url="http://139.162.15.80:6969/zoobc/api/v1/docs/swagger.json"
-      expand-responses="all"
-    ></redoc>
+    <redoc spec-url="http://139.162.15.80:6969/zoobc/api/v1/docs/swagger.json" expand-responses="all"></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"></script>
   </body>
 </html>
